--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,6 @@
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
     <string name="sunday">sunday</string>
+    <string name="day_meals">Day Meals</string>
+    <string name="dayly_meals">"Day Meals "</string>
 </resources>
