--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -5,4 +5,5 @@
     <string name="login">LOGIN</string>
     <string name="signup">signup</string>
     <string name="forgetpass">Forget Password</string>
+    <string name="enjoy">Emjoy your favourite meals</string>
 </resources>
