add ingrediant Meals and filter it

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -24,4 +24,5 @@
     <string name="addFavourit">Add To Favourit</string>
     <string name="meal_country">Country</string>
     <string name="Ingrediant">Ingrediant</string>
+    <string name="category">category</string>
 </resources>
