adding room and google auth

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,13 @@
     <string name="signup">signup</string>
     <string name="forgetpass">Forget Password</string>
     <string name="enjoy">Emjoy your favourite meals</string>
+    <string name="name">Name</string>
+    <string name="email">Email</string>
+    <string name="pass">Password</string>
+    <string name="confirm_pass">Comfirm Password</string>
+    <string name="guest">Guest</string>
+    <string name="oops">OOPS!</string>
+    <string name="no_internet">No internet Connection</string>
+    <string name="rety">Rety</string>
+
 </resources>
