--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,5 +36,12 @@
     <string name="country">country</string>
     <string name="meal">meal</string>
     <string name="search_by">Search With :</string>
+    <string name="daily_meals">Day Meals</string>
+    <string name="monday">monday</string>
+    <string name="tuesday">tuesday</string>
+    <string name="wednesday">wednesday</string>
+    <string name="tharsday">tharsday</string>
+    <string name="friday">friday</string>
+    <string name="satarday">satarday</string>
 
 </resources>
