--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -36,7 +36,7 @@
     <string name="country">country</string>
     <string name="meal">meal</string>
     <string name="search_by">Search With :</string>
-    <string name="daily_meals">Day Meals</string>
+    <string name="daily_meals">week plan</string>
     <string name="monday">monday</string>
     <string name="tuesday">tuesday</string>
     <string name="wednesday">wednesday</string>
