add add to plan dropdown list

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -44,5 +44,7 @@
     <string name="friday">friday</string>
     <string name="satarday">satarday</string>
     <string name="drop_hint">Add to plan</string>
+    <string name="recommended">Recommended for you</string>
+    <string name="add_to_plan">Add To  Plan</string>
 
 </resources>
