--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -51,4 +51,11 @@
     <string name="recommended">Recommended for you</string>
     <string name="add_to_plan">Add To  Plan</string>
 
+
+    <string name="facebook_app_id">1535617680256904</string>
+    <string name="fb_login_protocol_scheme">fb1234</string>
+    <string name="facebook_client_token">56789</string>
+
+
+
 </resources>
