google cleander and fix bugs

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -21,7 +21,7 @@
     <string name="Meal_instructions">Meal Instructions</string>
     <string name="meal_tag">MealTag</string>
     <string name="Ingridiant">Ingridiant</string>
-    <string name="addFavourit">Add To Favourite</string>
+    <string name="addTogoogleCalendar">Add To Google Calendar </string>
     <string name="meal_country">Country</string>
     <string name="Ingrediant">Ingrediant</string>
     <string name="category">category</string>
