handel db get meal add arabic subtitle

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -50,6 +50,9 @@
     <string name="drop_hint">Add to plan     </string>
     <string name="recommended">Recommended for you</string>
     <string name="add_to_plan">Add To  Plan</string>
+    <string name="lotte1">  if you are single and need easy way to cook ??</string>
+    <string name="lotte2">If you are a house wife and dont know what kind of food you cook </string>
+    <string name="lotte3">welcome you are in right app </string>
 
 
     <string name="facebook_app_id">1201578387138291</string>
