--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -53,12 +53,25 @@
     <string name="lotte1">  if you are single and need easy way to cook ??</string>
     <string name="lotte2">If you are a house wife and dont know what kind of food you cook </string>
     <string name="lotte3">welcome you are in right app </string>
+    <string name="login_as_gest">Are you sure you want to enter as a guest?
+ </string>
+    <string name="delete_from_plan">Are you sure you want to delete this meal from your plan?
+ </string>
+
+    <string name="delete_from_favourit">Are you sure you want to delete this meal from your favorite list?
+ </string>
+
+
+
 
 
     <string name="facebook_app_id">1201578387138291</string>
     <string name="fb_login_protocol_scheme">fb1234</string>
     <string name="facebook_client_token">56789</string>
     <string name="logout">logout</string>
+    <string name="delete_meal">Do you want delete meal ??</string>
+    <string name="delete">Delete</string>
+    <string name="cancel">cancel</string>
 
 
 </resources>
