--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -60,6 +60,8 @@
 
     <string name="delete_from_favourit">Are you sure you want to delete this meal from your favorite list?
  </string>
+    <string name="message_for_login">Sorry,You should login first to enjoy this feature
+ </string>
 
 
 
